# BrandLogoDetection

./: Dockerfile  MANIFEST.in  README.md  pyproject.toml  requirements.txt  run.py
nike_detector/nike_detector/service/: evaluation_pipeline_params.py  service.py  train.py
nike_detector/nike_detector/service/configs/: base_config.yaml
